--- a/index.html
+++ b/index.html
@@ -2,54 +2,104 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
   <title>Frontend Mentor | Chat app UI</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="./styles/styles.css">
-
+  <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
 <body>
+  <header>
+    <section class="mobile-ui">
+      <section class="app">
+        <section class="app__header">
+          <span class="app__header-notch"></span>
+          <span class="navigate navigate--secondary"></span>
+          <div class="user">
+            <img src="./images/avatar.jpg" alt="Samuel Green's avatar" class="user__img" />
+            <div class="user__info">
+              <strong class="user__name"> Samuel Green </strong>
+              <small> Available to Walk </small>
+            </div>
+          </div>
+          <ul class="ellipsis-container">
+            <li class="ellipsis-dot"></li>
+            <li class="ellipsis-dot"></li>
+            <li class="ellipsis-dot"></li>
+          </ul>
+        </section>
+        <section class="app__chat">
+          <p class="chat chat--left">
+            That sounds great. I’d be happy with that.
+          </p>
+          <p class="chat chat--left">
+            Could you send over some pictures of your dog, please?
+          </p>
+          <ul class="attachments">
+            <li>
+              <img src="./images/dog-image-1.jpg" alt="Dog Image 1">
+            </li>
+            <li>
+              <img src="./images/dog-image-2.jpg" alt="Dog Image 2">
+            </li>
+            <li>
+              <img src="./images/dog-image-3.jpg" alt="Dog Image 3">
+            </li>
+          </ul>
+          <p class="chat chat--right">
+            Here are a few pictures. She’s a happy girl!
+          </p>
+          <p class="chat chat--right">Can you make it?</p>
+          <p class="chat chat--left">
+            She looks so happy! The time we discussed works. How long shall I
+            take her out for?
+          </p>
+          <p class="chat chat--special">
+            <input type="radio" name="walking-duration" id="half" />
+            <span>30 minute walk</span>
+            <strong> $29 </strong>
+          </p>
+          <p class="chat chat--special">
+            <input type="radio" name="walking-duration" id="one" />
+            <span>1 hour walk</span>
+            <strong> $49 </strong>
+          </p>
 
-  Samuel Green
-  Available to Walk
+          <form class="chat-form">
+            <input type="text" placeholder="Type a message..." />
+            <button type="submit" class="">
+              <span class="sr-only">Send message</span>
+              <span class="navigate navigate--primary"></span>
+            </button>
+          </form>
+        </section>
+      </section>
+    </section>
+  </header>
 
-  That sounds great. I’d be happy with that.
+  <main>
+    <h1>Simple booking</h1>
+    <p>
+      Stay in touch with our dog walkers through the chat interface. This
+      makes it easy to discuss arrangements and make bookings. Once the walk
+      has been completed you can rate your walker and book again all through
+      the chat.
+    </p>
+  </main>
 
-  Could you send over some pictures of your dog, please?
-
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to
-  discuss arrangements and make bookings. Once the walk has been completed you can rate
-  your walker and book again all through the chat.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer class="sr-only">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your
+      Name Here</a>.
+  </footer>
 </body>
 
 </html>
