--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
   <header>
+    <span class="pattern pattern--primary"></span>
     <section class="mobile-ui">
       <section class="app">
         <section class="app__header">
@@ -90,13 +91,16 @@
   </header>
 
   <main>
-    <h1>Simple booking</h1>
-    <p>
-      Stay in touch with our dog walkers through the chat interface. This
-      makes it easy to discuss arrangements and make bookings. Once the walk
-      has been completed you can rate your walker and book again all through
-      the chat.
-    </p>
+    <span class="pattern pattern--secondary"></span>
+    <section>
+      <h1>Simple booking</h1>
+      <p>
+        Stay in touch with our dog walkers through the chat interface. This
+        makes it easy to discuss arrangements and make bookings. Once the walk
+        has been completed you can rate your walker and book again all through
+        the chat.
+      </p>
+    </section>
   </main>
 
   <footer class="sr-only">
